Travel::Status::DE::VRR 3.17 - Wed Oct 15 2025

    * New dependency: URI::Escape
    * URL-Escape umlauts in name/place parameters sent to EFA backends.
      This fixes umlaut-related issues in LinzAG and VVO requests.
    * EFA: Detect "invalid stop" backend errors.
    * EFA(3pm): Remove efa_encoding, which has been unsupported for a long
      time already.

Travel::Status::DE::VRR 3.16 - Sat Sep 20 2025

    * Add AVV ("AVV Augsburg", not Aachen) service definition

Travel::Status::DE::VRR 3.15 - Sat Aug 30 2025

    * Trip->polyline: improve handling of trips that pass the same stop
      multiple times

Travel::Status::DE::VRR 3.14 - Mon Jul 14 2025

    * Fix handling of stops with just a single departure

Travel::Status::DE::VRR 3.13 - Thu Jun 19 2025

    * EFA->new_p: Return $self in case of error so that clients can access
      place_candidates and name_candidates. This behaviour was already
      documented, but not implemented.

Travel::Status::DE::VRR 3.12 - Wed Jun 18 2025

    * Departure->id: Include the scheduled departure time. This fixes cases
      where the trip details (stopseq) endpoint would randomly return
      yesterday's details or no usable data at all.
    * efa-m: Trip detail mode now only accepts trip IDs obtained from v3.12+

Travel::Status::DE::VRR 3.11 - Mon Jun 16 2025

    * efa-m: Show occupancy in trip details
    * Trip->route: Provide occupancy data

Travel::Status::DE::VRR 3.10 - Sun Jun 15 2025

    * Stop: Add is_cancelled accessor
    * Add BEG, RVV service definitions
    * Breaking change: $efa->name_candidates and $efa->place_candidates now
      return lists of Travel::Status::DE::EFA::Stop objects rather than
      just strings.

Travel::Status::DE::VRR 3.09 - Sun Mar 23 2025

    * Trip: Add polyline accessor

Travel::Status::DE::VRR 3.08 - Sat Feb 08 2025

    * EFA->new_p: Return $efa instance in rejected promise if it was
      rejected after parsing (e.g. due to ambiguous name/place parameter)
