@@ -9,7 +9,7 @@ use Travel::Status::DE::EFA::Stop;
 
 use parent 'Class::Accessor';
 
-our $VERSION = '3.17';
+our $VERSION = '3.18';
 
 Travel::Status::DE::EFA::Trip->mk_ro_accessors(
 	qw(operator product product_class name line number type id dest_name dest_id)
@@ -238,7 +238,7 @@ trip
 
 =head1 VERSION
 
-version 3.17
+version 3.18
 
 =head1 DESCRIPTION
 
